0.5.4:

0.5.3:
- General updates:
--- Tested and confirmed Foundry v9 compatibility.

0.5.2:
- General updates:
--- Now outputting NPCs as the new NPC type if combined with Starfinder v0.16.
--- Minimum supported system version is now Starfinder v0.12.
- PAIZO Block updates:
--- Now parsing the spell save DC value into the save DC field.

0.5.1:
- General updates:
--- Marking support for FoundryVTT 0.8.9

0.5.0:
- General updates:
--- Implemented support for Starfinder v0.13.0's upcoming damage types update. (Works backwards compatible with Starfinder v0.12.1)
--- Marked VTTES plugin and PCGen XML as deprecated. These do not seem to be used (anymore), and aren't functional since the Foundry v0.8 update anyway.
- PAIZO Block updates:
--- Added loot container, including a duplicate copy of weapons, left intentionally unequipped, so you can just drag the loot container onto the world.
--- Setting up token defaults, name and bars now always visible for owner, and stamina bar replaced with resolve, token size now follows NPC size.
--- Updated description parsing to no longer double-print "Description" header.
--- Updated special ability parsing to generate custom features for abilities that are not recognized by any compendia.
--- Improved critical parsing, it now parses the whole critical effect into the critical effects field.
--- Improved immunities parsing, it now separates unrecognized immunities with ; instead of ,.
--- Improved language parsing, it can now handle '1 other language known in life' as a single entry.
--- Improved weaknesses parsing, it now properly checks the appropriate weakness if it is a standard weakness, and multiple special weaknesses are now concatenated by ; instead.

0.4.6:
- PAIZO Block updates:
--- Improved spellbook parsing, now assigns the proper spell level to the spell, and updates spells per day correctly again.
--- Fixed damage parsing on attacks.

0.4.5:
- PAIZO Block updates: