@@ -1,4 +1,6 @@
 0.5.4:
+- General updates:
+--- Added support for the DR/ER modifiers and data structure changes for Starfinder v0.18.
 
 0.5.3:
 - General updates:
